HelloUltraviolet/Fixtures/RejectedSource/Procedures/MethodsAndReceiversDiagnostic/Expected.uv
//! Expected diagnostic metadata for the MethodsAndReceiversDiagnostic rejected-source specimen.

expectedDiagnostic("", "diag.15.MethodsAndReceivers")
